Implemented loading agents and running simulation with them. Fixed bug allowing collisions.